--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>Copyright 2020, Your Name</p>
+            <p>Copyright 2020, Rene Tim</p>
         </div>
     </footer>
 </body>
